--- a/tuistudio/static/css/site/business.css
+++ b/tuistudio/static/css/site/business.css
@@ -38,7 +38,7 @@
 }
 #page-business .project-type-selector .btn-primary {
   background-color: white;
-  border: 1px solid #dddddd;
+  border: 1px solid #cccccc;
   color: #999999;
   transition: all 150ms ease-out;
   -webkit-transition: all 150ms ease-out;
