--- a/tuistudio/static/css/site/business.less
+++ b/tuistudio/static/css/site/business.less
@@ -28,7 +28,7 @@
 
     .btn-primary {
       background-color: white;
-      border: 1px solid #dddddd;
+      border: 1px solid #cccccc;
       color: #999999;
       .transition();
 
