--- a/tuistudio/static/css/site/business.less
+++ b/tuistudio/static/css/site/business.less
@@ -30,14 +30,12 @@
       background-color: white;
       border: 1px solid #cccccc;
       color: #999999;
-      .transition();
 
       &:hover {
         border: 1px solid @main-color;
       }
 
-      &:focus,
-      &:active {
+      &:focus {
         box-shadow: none;
       }
 
