--- a/tuistudio/static/css/site/business.css
+++ b/tuistudio/static/css/site/business.css
@@ -40,17 +40,11 @@
   background-color: white;
   border: 1px solid #cccccc;
   color: #999999;
-  transition: all 150ms ease-out;
-  -webkit-transition: all 150ms ease-out;
-  -moz-transition: all 150ms ease-out;
-  -ms-transition: all 150ms ease-out;
-  -o-transition: all 150ms ease-out;
 }
 #page-business .project-type-selector .btn-primary:hover {
   border: 1px solid #36a9e5;
 }
-#page-business .project-type-selector .btn-primary:focus,
-#page-business .project-type-selector .btn-primary:active {
+#page-business .project-type-selector .btn-primary:focus {
   box-shadow: none;
 }
 #page-business .project-type-selector .btn-primary.active {
