--- a/tuistudio/static/css/site/business.css
+++ b/tuistudio/static/css/site/business.css
@@ -49,7 +49,7 @@
 }
 #page-business .project-type-selector .btn-primary.active {
   border: 1px solid #36a9e5;
-  color: #36a9e5;
+  color: #1b90cd;
   box-shadow: none;
 }
 #page-business .fancy-select {
