--- a/tuistudio/static/css/site/business.less
+++ b/tuistudio/static/css/site/business.less
@@ -41,7 +41,7 @@
 
       &.active {
         border: 1px solid @main-color;
-        color: @main-color;
+        color: darken(@main-color, 10%);
         box-shadow: none;
       }
     }
