--- a/tuistudio/static/css/site/business.css
+++ b/tuistudio/static/css/site/business.css
@@ -30,11 +30,10 @@
 }
 #page-business .project-type-label {
   margin-top: 6px;
-  margin-right: 11px;
   float: left;
 }
 #page-business .project-type-selector {
-  float: left;
+  float: right;
 }
 #page-business .project-type-selector .btn-primary {
   background-color: white;
@@ -54,7 +53,7 @@
 }
 #page-business .fancy-select {
   width: 232px;
-  float: left;
+  float: right;
 }
 #page-business .fancy-select * {
   transition: all 200ms ease-out;
@@ -64,7 +63,7 @@
   -o-transition: all 200ms ease-out;
 }
 #page-business .fancy-select:first-child {
-  margin-right: 14px;
+  float: left;
 }
 #page-business .btn-lg {
   font-size: 16px;
