--- a/tuistudio/static/css/site/business.less
+++ b/tuistudio/static/css/site/business.less
@@ -19,12 +19,11 @@
 
   .project-type-label {
     margin-top: 6px;
-    margin-right: 11px;
     float: left;
   }
 
   .project-type-selector {
-    float: left;
+    float: right;
 
     .btn-primary {
       background-color: white;
@@ -49,14 +48,14 @@
 
   .fancy-select {
     width: 232px;
-    float: left;
+    float: right;
 
     * {
       .transition(200ms);
     }
 
     &:first-child {
-      margin-right: 14px;
+      float: left;
     }
   }
 
