--- a/tuistudio/static/css/layout.css
+++ b/tuistudio/static/css/layout.css
@@ -104,6 +104,7 @@ a:hover {
 }
 .footer {
   padding: 20px 0;
+  line-height: 1;
   margin-top: 80px;
   border-top: 1px solid #dddddd;
   font-size: 13px;
@@ -125,5 +126,4 @@ a:hover {
   display: block;
   margin-left: 12px;
   height: 14px;
-  margin-top: 2px;
 }
