--- a/tuistudio/static/css/layout.less
+++ b/tuistudio/static/css/layout.less
@@ -108,6 +108,7 @@ a {
 
 .footer {
   padding: 20px 0;
+  line-height: 1;
   margin-top: 80px;
   border-top: 1px solid #dddddd;
   font-size: 13px;
@@ -137,6 +138,5 @@ a {
     display: block;
     margin-left: 12px;
     height: 14px;
-    margin-top: 2px;
   }
 }
