--- a/tuistudio/static/css/site/business.css
+++ b/tuistudio/static/css/site/business.css
@@ -20,20 +20,13 @@
   margin: 40px 0 40px 0;
 }
 #page-business .form-wap {
-  width: 52%;
+  width: 520px;
 }
 #page-business .form-group {
   margin-bottom: 20px;
 }
 #page-business textarea {
   resize: vertical;
-}
-#page-business .project-type-label {
-  margin-top: 6px;
-  float: left;
-}
-#page-business .project-type-selector {
-  float: right;
 }
 #page-business .project-type-selector .btn-primary {
   background-color: white;
@@ -52,8 +45,9 @@
   box-shadow: none;
 }
 #page-business .fancy-select {
-  width: 232px;
-  float: right;
+  width: 160px;
+  margin-left: 20px;
+  float: left;
 }
 #page-business .fancy-select * {
   transition: all 200ms ease-out;
@@ -63,7 +57,7 @@
   -o-transition: all 200ms ease-out;
 }
 #page-business .fancy-select:first-child {
-  float: left;
+  margin-left: 0;
 }
 #page-business .btn-lg {
   font-size: 16px;
