--- a/tuistudio/static/css/site/business.less
+++ b/tuistudio/static/css/site/business.less
@@ -6,7 +6,7 @@
   }
 
   .form-wap {
-    width: 52%;
+    width: 520px;
   }
 
   .form-group {
@@ -17,13 +17,7 @@
     resize: vertical;
   }
 
-  .project-type-label {
-    margin-top: 6px;
-    float: left;
-  }
-
   .project-type-selector {
-    float: right;
 
     .btn-primary {
       background-color: white;
@@ -47,15 +41,16 @@
   }
 
   .fancy-select {
-    width: 232px;
-    float: right;
+    width: 160px;
+    margin-left: 20px;
+    float: left;
 
     * {
       .transition(200ms);
     }
 
     &:first-child {
-      float: left;
+      margin-left: 0;
     }
   }
 
