--- a/tuistudio/templates/site/business.html
+++ b/tuistudio/templates/site/business.html
@@ -15,7 +15,7 @@
    <div class="container">
       <div class="row">
          <div class="form-wap center-block">
-            <h1 class="text-center">Start Your Project</h1>
+            <h1 class="text-center">Boost Your Business With US</h1>
 
             <form role="form" method="post">
                {{ form.csrf_token() }}
