--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -56,6 +56,13 @@
     }
   }
 
+  .work {
+    img {
+      width: 600px;
+      box-shadow: 0 0 5px rgba(0, 0, 0, .3);
+    }
+  }
+
   .services {
     margin-top: 75px;
     padding-bottom: 60px;
