--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -30,17 +30,18 @@
 
    <div class="work work1">
       <div class="container clearfix">
-         <h1 class="title">Work 1</h1>
+         <h1 class="title">AOD</h1>
 
-         <img class="center-block img-responsive" src="http://placehold.it/800x500" alt="">
+         <img class="center-block img-responsive" src="{{ static('image/works/aod.png') }}" alt="">
       </div>
    </div>
 
    <div class="work">
       <div class="container clearfix">
-         <h1 class="title">Work 2</h1>
+         <h1 class="title">LeMaker</h1>
 
-         <img class="center-block img-responsive" src="http://placehold.it/800x500" alt="">
+         <img class="center-block img-responsive" src="{{ static('image/works/lemaker.png') }}"
+              alt="">
       </div>
    </div>
 
@@ -73,17 +74,19 @@
 
    <div class="work">
       <div class="container clearfix">
-         <h1 class="title">Work 3</h1>
+         <h1 class="title">Tian Qing</h1>
 
-         <img class="center-block img-responsive" src="http://placehold.it/800x500" alt="">
+         <img class="center-block img-responsive" src="{{ static('image/works/tianqing.jpg') }}"
+              alt="">
       </div>
    </div>
 
    <div class="work">
       <div class="container clearfix">
-         <h1 class="title">Work 4</h1>
+         <h1 class="title">Li Feng Tang</h1>
 
-         <img class="center-block img-responsive" src="http://placehold.it/800x500" alt="">
+         <img class="center-block img-responsive" src="{{ static('image/works/lifengtang.jpg') }}"
+              alt="">
       </div>
    </div>
 
