--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -32,7 +32,10 @@
       <div class="container clearfix">
          <h1 class="title">AOD</h1>
 
-         <img class="center-block img-responsive" src="{{ static('image/works/aod.png') }}" alt="">
+         <div class="image-wap">
+            <img class="center-block img-responsive" src="{{ static('image/works/aod.png') }}"
+                 alt="">
+         </div>
       </div>
    </div>
 
@@ -40,15 +43,16 @@
       <div class="container clearfix">
          <h1 class="title">LeMaker</h1>
 
-         <img class="center-block img-responsive" src="{{ static('image/works/lemaker.png') }}"
-              alt="">
+         <div class="image-wap">
+            <img class="center-block img-responsive" src="{{ static('image/works/lemaker.png') }}"
+                 alt="">
+         </div>
       </div>
    </div>
 
    <div class="services">
       <div class="container">
          <h1 class="title">Services</h1>
-
 
          <div class="row clearfix">
             <div class="col-sm-4 service">
@@ -76,8 +80,11 @@
       <div class="container clearfix">
          <h1 class="title">Tian Qing</h1>
 
-         <img class="center-block img-responsive" src="{{ static('image/works/tianqing.jpg') }}"
-              alt="">
+         <div class="image-wap">
+            <img class="center-block img-responsive" src="{{ static('image/works/tianqing.jpg') }}"
+                 alt="">
+         </div>
+
       </div>
    </div>
 
@@ -85,8 +92,11 @@
       <div class="container clearfix">
          <h1 class="title">Li Feng Tang</h1>
 
-         <img class="center-block img-responsive" src="{{ static('image/works/lifengtang.jpg') }}"
-              alt="">
+         <div class="image-wap">
+            <img class="center-block img-responsive"
+                 src="{{ static('image/works/lifengtang.jpg') }}"
+                 alt="">
+         </div>
       </div>
    </div>
 
