--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -57,9 +57,21 @@
   }
 
   .work {
-    img {
-      width: 600px;
-      box-shadow: 0 0 5px rgba(0, 0, 0, .3);
+    .image-wap {
+      height: 510px;
+      width: 739px;
+      background: url(/static/image/iMac.png) no-repeat center center;
+      margin: 0 auto;
+      overflow: hidden;
+      position: relative;
+
+      img {
+        width: 669px;
+        box-shadow: 0 0 5px rgba(0, 0, 0, .3);
+        position: absolute;
+        top: 35px;
+        left: 35px;
+      }
     }
   }
 
