rm container width style

--- a/tuistudio/static/css/layout.less
+++ b/tuistudio/static/css/layout.less
@@ -1,16 +1,18 @@
 @import "utils";
 
-@media (min-width: 1200px) {
-  .container {
-    width: 980px;
-  }
-}
-
 html {
 }
 
 body {
   margin-top: 80px;
+
+  //  .main-wap {
+  //    @media (min-width: 1200px) {
+  //      .container {
+  //        width: 980px;
+  //      }
+  //    }
+  //  }
 }
 
 a {
