--- a/tuistudio/templates/site/business.html
+++ b/tuistudio/templates/site/business.html
@@ -20,7 +20,7 @@
             <form role="form" method="post">
                {{ form.csrf_token() }}
 
-               <div class="form-group clearfix">
+               <div class="form-group text-center clearfix">
                   <div class="btn-group project-type-selector" data-toggle="buttons">
                      <label class="btn btn-primary active">
                         <input type="checkbox" name="type" value="WM" checked>
