--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -76,10 +76,10 @@
   }
 
   .services {
-    margin-top: 75px;
+    //    margin-top: 75px;
     padding-bottom: 60px;
-    background-color: @main-color;
-    color: white;
+    background-color: #f8f8f8;
+    //    color: white;
 
     .service {
       text-align: center;
