--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -18,16 +18,6 @@
       </div>
    </div>
 
-   {#   <div class="container works">#}
-   {#      <h1 class="title">Our Works</h1>#}
-   {##}
-   {#      <div class="row clearfix">#}
-   {#         <img src="{{ static('image/aod_gray.png') }}" class="aod" alt="AOD"/>#}
-   {#         <img src="{{ static('image/lemaker_gray.png') }}" class="lemaker" alt="LeMaker"/>#}
-   {#         <img src="{{ static('image/optico_gray.png') }}" class="optico" alt="Optico"/>#}
-   {#      </div>#}
-   {#   </div>#}
-
    <div class="services">
       <div class="container">
          <h1 class="title">Services</h1>
@@ -51,6 +41,16 @@
                <p>System & Server</p>
             </div>
          </div>
+      </div>
+   </div>
+
+   <div class="container works">
+      <h1 class="title">Our Works</h1>
+
+      <div class="row clearfix">
+         <img src="{{ static('image/aod_gray.png') }}" class="aod" alt="AOD"/>
+         <img src="{{ static('image/lemaker_gray.png') }}" class="lemaker" alt="LeMaker"/>
+         <img src="{{ static('image/optico_gray.png') }}" class="optico" alt="Optico"/>
       </div>
    </div>
 
