--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -32,6 +32,7 @@
   .works {
     text-align: center;
     padding-bottom: 30px;
+    margin-bottom: 60px;
     border-bottom: 1px solid #dddddd;
 
     .title {
@@ -57,6 +58,8 @@
   }
 
   .work {
+    margin-bottom: 60px;
+
     .image-wap {
       height: 510px;
       width: 739px;
