--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -56,7 +56,7 @@
 
    <div class="work work1">
       <div class="container clearfix">
-         <h1 class="title">AOD</h1>
+         {#         <h1 class="title">AOD</h1>#}
 
          <div class="image-wap">
             <img class="center-block img-responsive" src="{{ static('image/works/aod.png') }}"
@@ -67,7 +67,7 @@
 
    <div class="work">
       <div class="container clearfix">
-         <h1 class="title">LeMaker</h1>
+         {#         <h1 class="title">LeMaker</h1>#}
 
          <div class="image-wap">
             <img class="center-block img-responsive" src="{{ static('image/works/lemaker.png') }}"
@@ -78,7 +78,7 @@
 
    <div class="work">
       <div class="container clearfix">
-         <h1 class="title">Tian Qing</h1>
+         {#         <h1 class="title">Tian Qing</h1>#}
 
          <div class="image-wap">
             <img class="center-block img-responsive" src="{{ static('image/works/tianqing.jpg') }}"
@@ -90,7 +90,7 @@
 
    <div class="work">
       <div class="container clearfix">
-         <h1 class="title">Li Feng Tang</h1>
+         {#         <h1 class="title">Li Feng Tang</h1>#}
 
          <div class="image-wap">
             <img class="center-block img-responsive"
