--- a/tuistudio/static/css/site/index.css
+++ b/tuistudio/static/css/site/index.css
@@ -42,6 +42,7 @@
 #page-index .works {
   text-align: center;
   padding-bottom: 30px;
+  margin-bottom: 60px;
   border-bottom: 1px solid #dddddd;
 }
 #page-index .works img {
@@ -57,6 +58,9 @@
 }
 #page-index .works img.optico {
   height: 70px;
+}
+#page-index .work {
+  margin-bottom: 60px;
 }
 #page-index .work .image-wap {
   height: 510px;
