--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -50,7 +50,8 @@
       <div class="row clearfix">
          <img src="{{ static('image/aod_gray.png') }}" class="aod" alt="AOD"/>
          <img src="{{ static('image/lemaker_gray.png') }}" class="lemaker" alt="LeMaker"/>
-         <img src="{{ static('image/optico_gray.png') }}" class="optico" alt="Optico"/>
+         <img src="{{ static('image/aod_gray.png') }}" class="aod" alt="AOD"/>
+         <img src="{{ static('image/lemaker_gray.png') }}" class="lemaker" alt="LeMaker"/>
       </div>
    </div>
 
@@ -102,7 +103,7 @@
 
    <div class="tech">
       <div class="container">
-         <h1 class="title">Technologies we use</h1>
+         {#         <h1 class="title">Technologies we use</h1>#}
 
          <div class="center-block tech-wap">
             <img class="tech-item" src="{{ static('image/python.png') }}" alt=""/>
