update options in business page

--- a/tuistudio/templates/site/business.html
+++ b/tuistudio/templates/site/business.html
@@ -41,24 +41,25 @@
                   <div class="clearfix">
                      <select class="form-control" name="bugget" id="bugget">
                         <option>Project Bugget</option>
-                        <option>Less than $1000</option>
-                        <option>$1000 ~ $2000</option>
-                        <option>$2000 ~ $5000</option>
-                        <option>More than $5000</option>
+                        <option>Less than $3,000</option>
+                        <option>$3,000 ~ $10,000</option>
+                        <option>$10,000 ~ $25,000</option>
+                        <option>More than $50000</option>
                      </select>
 
                      <select class="form-control" name="period" id="period">
                         <option>Project Period</option>
-                        <option>1 month</option>
-                        <option>1 ~ 3 month</option>
-                        <option>more than 3 months</option>
+                        <option>a month</option>
+                        <option>a quarter</option>
+                        <option>half year</option>
+                        <option>a year</option>
                      </select>
 
                      <select class="form-control" name="hire_type" id="hire-type">
                         <option>Hire Type</option>
-                        <option>Hire Type 1</option>
-                        <option>Hire Type 2</option>
-                        <option>Hire Type 3</option>
+                        <option>dedicated</option>
+                        <option>affiliated + fulfilled(oem)</option>
+                        <option>contracted</option>
                      </select>
                   </div>
                </div>
