update options in business page

--- a/tuistudio/templates/site/business.html
+++ b/tuistudio/templates/site/business.html
@@ -58,7 +58,7 @@
                      <select class="form-control" name="hire_type" id="hire-type">
                         <option>Hire Type</option>
                         <option>dedicated</option>
-                        <option>affiliated + fulfilled(oem)</option>
+                        <option>affiliated + fulfilled</option>
                         <option>contracted</option>
                      </select>
                   </div>
