--- a/tuistudio/templates/site/business.html
+++ b/tuistudio/templates/site/business.html
@@ -41,10 +41,10 @@
                   <div class="clearfix">
                      <select class="form-control" name="bugget" id="bugget">
                         <option>Project Bugget</option>
-                        <option>Less than $3,000</option>
-                        <option>$3,000 ~ $10,000</option>
-                        <option>$10,000 ~ $25,000</option>
-                        <option>More than $50000</option>
+                        <option>≤ $3,000</option>
+                        <option>> $3,000 and ≤ $10,000</option>
+                        <option>> $10,000 and ≤ $25,000</option>
+                        <option>≥ $50,000</option>
                      </select>
 
                      <select class="form-control" name="period" id="period">
