add process section

--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -29,6 +29,21 @@
     margin: 50px 0;
   }
 
+  .services {
+    padding-bottom: 60px;
+    background-color: #f8f8f8;
+
+    .service {
+      text-align: center;
+
+      span {
+        font-size: 80px;
+        display: block;
+        margin-bottom: 20px;
+      }
+    }
+  }
+
   .works {
     text-align: center;
     padding-bottom: 30px;
@@ -79,23 +94,6 @@
     }
   }
 
-  .services {
-    //    margin-top: 75px;
-    padding-bottom: 60px;
-    background-color: #f8f8f8;
-    //    color: white;
-
-    .service {
-      text-align: center;
-
-      span {
-        font-size: 80px;
-        display: block;
-        margin-bottom: 20px;
-      }
-    }
-  }
-
   .tech {
     .tech-wap {
       width: 80%;
@@ -111,6 +109,13 @@
           margin-left: 0;
         }
       }
+    }
+  }
+
+  .process {
+    p {
+      font-size: 18px;
+      margin-bottom: 15px;
     }
   }
 
