--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -43,10 +43,11 @@
          </a>
 
          <ul class="nav navbar-nav navbar-right">
-            <li id="nav-services"><a href="{{ url_for('site.index') }}#services">Services</a></li>
-            <li id="nav-works"><a href="{{ url_for('site.index') }}#works">Works</a></li>
-            <li id="nav-tech"><a href="{{ url_for('site.index') }}#tech">Tech</a></li>
-            <li id="nav-contact"><a href="{{ url_for('site.index') }}#contact">Contact</a></li>
+            <li id="nav-services"><a href="{{ url_for('site.index') }}#services">SERVICES</a></li>
+            <li id="nav-works"><a href="{{ url_for('site.index') }}#works">WORKS</a></li>
+            <li id="nav-tech"><a href="{{ url_for('site.index') }}#tech">TECHS</a></li>
+            <li id="nav-contact"><a href="{{ url_for('site.index') }}#contact">CONTACT</a></li>
+            <li id="nav-process"><a href="{{ url_for('site.index') }}#process">PROCESS</a></li>
 
             {% if g.user %}
                <li id="nav-settings">
