--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -131,6 +131,34 @@
       </div>
    </div>
 
+   <div class="process">
+      <div class="container">
+         <h1 class="title">Process</h1>
+
+         <div class="row">
+            <div class="col-sm-3 text-center">
+               <p>Discover & Plan</p>
+               <img src="http://placehold.it/150x150" alt=""/>
+            </div>
+
+            <div class="col-sm-3 text-center">
+               <p>Concept & Refine</p>
+               <img src="http://placehold.it/150x150" alt=""/>
+            </div>
+
+            <div class="col-sm-3 text-center">
+               <p>Build & Deploy</p>
+               <img src="http://placehold.it/150x150" alt=""/>
+            </div>
+
+            <div class="col-sm-3 text-center">
+               <p>Grow & Measure</p>
+               <img src="http://placehold.it/150x150" alt=""/>
+            </div>
+         </div>
+      </div>
+   </div>
+
    <div class="contact">
       <div class="container">
          <h1 class="title">Contact</h1>
