--- a/tuistudio/static/css/layout.css
+++ b/tuistudio/static/css/layout.css
@@ -88,8 +88,7 @@ a:hover {
   -o-transition: all 200ms ease-out;
 }
 .navbar .navbar-collapse .navbar-nav > li > a {
-  padding: 15px 20px;
-  font-size: 16px;
+  padding: 15px;
 }
 .navbar .navbar-collapse .navbar-nav > li > a:hover {
   background-color: transparent;
