--- a/tuistudio/static/css/layout.less
+++ b/tuistudio/static/css/layout.less
@@ -91,8 +91,7 @@ a {
     .transition(200ms);
 
     .navbar-nav > li > a {
-      padding: 15px 20px;
-      font-size: 16px;
+      padding: 15px;
 
       &:hover {
         background-color: transparent;
