--- a/tuistudio/static/css/site/index.css
+++ b/tuistudio/static/css/site/index.css
@@ -39,6 +39,18 @@
   text-align: center;
   margin: 50px 0;
 }
+#page-index .services {
+  padding-bottom: 60px;
+  background-color: #f8f8f8;
+}
+#page-index .services .service {
+  text-align: center;
+}
+#page-index .services .service span {
+  font-size: 80px;
+  display: block;
+  margin-bottom: 20px;
+}
 #page-index .works {
   text-align: center;
   padding-bottom: 30px;
@@ -80,18 +92,6 @@
   top: 35px;
   left: 35px;
 }
-#page-index .services {
-  padding-bottom: 60px;
-  background-color: #f8f8f8;
-}
-#page-index .services .service {
-  text-align: center;
-}
-#page-index .services .service span {
-  font-size: 80px;
-  display: block;
-  margin-bottom: 20px;
-}
 #page-index .tech .tech-wap {
   width: 80%;
   padding-left: 20px;
@@ -104,6 +104,10 @@
 }
 #page-index .tech .tech-wap .tech-item:first-child {
   margin-left: 0;
+}
+#page-index .process p {
+  font-size: 18px;
+  margin-bottom: 15px;
 }
 #page-index .contact ul {
   padding: 30px 0 0 50px;
