--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -68,25 +68,39 @@
 
 <div class="footer">
    <div class="container">
-      <ul class="links-left list-unstyled list-inline">
-         <li><a href="http://wiki.tuistudio.com" target="_blank">Wiki</a></li>
-         <li><a>Blog</a></li>
-         <li><a>Twitter</a></li>
-         <li><a href="https://github.com/tuistudio" target="_blank">Github</a></li>
-         <li><a>Collaboration</a></li>
-         <li><a>Jobs</a></li>
-         <li><a>Enterprise</a></li>
-         <li><a>Paterners</a></li>
-      </ul>
+      <div class="footer-content pull-left">
+         <div class="clearfix">
+            <ul class="links pull-left list-unstyled list-inline">
+               <li><a>Legal</a></li>
+               <li><a>Privacy</a></li>
+               <li><a>Terms</a></li>
+               <li><a>Jobs</a></li>
+               <li><a>Enterprise</a></li>
+               <li><a>Partners</a></li>
+               <li><a href="http://wiki.tuistudio.com" target="_blank">Wiki</a></li>
+               <li><a>Blog</a></li>
+            </ul>
 
-      <img class="usa pull-right" src="{{ static('image/usa.png') }}" alt="USA"/>
+            <img class="usa pull-left" src="{{ static('image/usa.png') }}" alt="USA"/>
+         </div>
 
-      <ul class="links-right list-inline list-unstyled">
-         <li><a>Privacy</a></li>
-         <li><a>Legal</a></li>
-      </ul>
+         <div class="cp">© 2013 TUI Studio. ALL RIGHTS RESERVED.</div>
 
-      <div class="cp">2014 © <span class="text-main">TUI</span> Studio</div>
+         <ul class="icons list-inline list-unstyled">
+            <li><a><span class="fa fa-twitter"></span></a></li>
+            <li><a><span class="fa fa-dribbble"></span></a></li>
+            <li>
+               <a href="https://github.com/tuistudio" target="_blank">
+                  <span class="fa fa-github"></span>
+               </a>
+            </li>
+            <li><a><span class="fa fa-linkedin-square"></span></a></li>
+         </ul>
+      </div>
+
+      <div class="footer-logo pull-right">
+         <span class="text-main">TUI</span> Studio
+      </div>
    </div>
 </div>
 
