--- a/tuistudio/templates/site/business.html
+++ b/tuistudio/templates/site/business.html
@@ -66,7 +66,7 @@
 
                <div class="form-group">
                   <textarea rows=8 class="form-control" id="desc" name="desc"
-                            placeholder="Description about your project"></textarea>
+                            placeholder="Let us do the heavy lifting. What's on your mind?"></textarea>
                </div>
 
                <div class="form-group">
