--- a/tuistudio/static/css/layout.less
+++ b/tuistudio/static/css/layout.less
@@ -118,10 +118,10 @@ a {
 
   .footer-content {
     .links {
-      margin-bottom: 15px;
+      margin-bottom: 18px;
 
       li {
-        padding-right: 10px;
+        padding-right: 15px;
 
         a {
           color: white;
@@ -140,13 +140,14 @@ a {
     }
 
     .cp {
-      margin-bottom: 15px;
+      margin-bottom: 18px;
     }
 
     .icons {
       font-size: 18px;
 
       li {
+        padding-right: 10px;
         //        width: 28px;
         //        height: 28px;
         //        text-align: center;
@@ -156,6 +157,10 @@ a {
 
         a {
           color: white;
+
+          &:hover {
+            color: @main-color;
+          }
         }
       }
     }
