--- a/tuistudio/static/css/layout.css
+++ b/tuistudio/static/css/layout.css
@@ -98,7 +98,7 @@ a:hover {
 }
 .footer {
   background-color: #4f5161;
-  padding: 30px 0;
+  padding: 35px 0;
   line-height: 1;
   margin-top: 80px;
   border-top: 1px solid #dddddd;
@@ -127,9 +127,10 @@ a:hover {
 }
 .footer .footer-content .icons {
   font-size: 18px;
+  margin-bottom: 0;
 }
 .footer .footer-content .icons li {
-  padding-right: 10px;
+  padding-right: 8px;
 }
 .footer .footer-content .icons li a {
   color: white;
