--- a/tuistudio/static/css/layout.less
+++ b/tuistudio/static/css/layout.less
@@ -109,7 +109,7 @@ a {
 
 .footer {
   background-color: rgb(79, 81, 97);
-  padding: 30px 0;
+  padding: 35px 0;
   line-height: 1;
   margin-top: 80px;
   border-top: 1px solid #dddddd;
@@ -145,9 +145,10 @@ a {
 
     .icons {
       font-size: 18px;
+      margin-bottom: 0;
 
       li {
-        padding-right: 10px;
+        padding-right: 8px;
         //        width: 28px;
         //        height: 28px;
         //        text-align: center;
