--- a/tuistudio/static/css/layout.less
+++ b/tuistudio/static/css/layout.less
@@ -116,7 +116,7 @@ a {
   font-size: 13px;
   color: white;
 
-  .footer-content {
+  .footer-left {
     .links {
       margin-bottom: 18px;
 
@@ -167,7 +167,16 @@ a {
     }
   }
 
-  .footer-logo {
-    font-size: 20px;
+  .footer-right {
+    text-align: right;
+
+    .logo {
+      font-size: 22px;
+      margin-bottom: 10px;
+    }
+
+    .slogan {
+      font-style: italic;
+    }
   }
 }
