--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -68,7 +68,7 @@
 
 <div class="footer">
    <div class="container">
-      <div class="footer-content pull-left">
+      <div class="footer-left pull-left">
          <div class="clearfix">
             <ul class="links pull-left list-unstyled list-inline">
                <li><a>Legal</a></li>
@@ -84,7 +84,7 @@
             <img class="usa pull-left" src="{{ static('image/usa.png') }}" alt="USA"/>
          </div>
 
-         <div class="cp">© 2013 TUI Studio. ALL RIGHTS RESERVED.</div>
+         <div class="cp">© 2013-2014 TUI Studio. ALL RIGHTS RESERVED.</div>
 
          <ul class="icons list-inline list-unstyled">
             <li><a><span class="fa fa-twitter"></span></a></li>
@@ -98,8 +98,12 @@
          </ul>
       </div>
 
-      <div class="footer-logo pull-right">
-         <span class="text-main">TUI</span> Studio
+      <div class="footer-right pull-right">
+         <div class="logo">
+            <span class="text-main">TUI</span> Studio
+         </div>
+
+         <div class="slogan">Let Our Apps Help Connect With Your Clients.</div>
       </div>
    </div>
 </div>
