--- a/tuistudio/static/css/layout.css
+++ b/tuistudio/static/css/layout.css
@@ -119,7 +119,8 @@ a:hover {
 .footer .footer-left .usa {
   display: block;
   margin-left: 12px;
-  height: 14px;
+  height: 20px;
+  margin-top: -3px;
 }
 .footer .footer-left .cp {
   margin-bottom: 18px;
