--- a/tuistudio/static/css/layout.less
+++ b/tuistudio/static/css/layout.less
@@ -135,7 +135,8 @@ a {
     .usa {
       display: block;
       margin-left: 12px;
-      height: 14px;
+      height: 20px;
+      margin-top: -3px;
     }
 
     .cp {
