--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -6,7 +6,7 @@
   }
 
   .market {
-    padding: 120px 0 120px 0;
+    padding: 180px 0 20px 0;
     background: url('/static/image/triangles.png') repeat;
     border-bottom: 1px solid #EEEEEE;
 
@@ -18,7 +18,17 @@
 
     p {
       font-size: 22px;
+      margin-bottom: 140px;
       color: #666;
+    }
+
+    .icons {
+      text-align: center;
+      font-size: 26px;
+
+      li {
+        padding: 0 8px;
+      }
     }
   }
 
