--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -87,14 +87,26 @@
          <div class="cp">© 2013-2014 TUI Studio. ALL RIGHTS RESERVED.</div>
 
          <ul class="icons list-inline list-unstyled">
-            <li><a><span class="fa fa-twitter"></span></a></li>
-            <li><a><span class="fa fa-dribbble"></span></a></li>
+            <li>
+               <a href="http://twitter.com" target="_blank">
+                  <span class="fa fa-twitter"></span>
+               </a>
+            </li>
+            <li>
+               <a href="https://dribbble.com/tuistudio-admin" target="_blank">
+                  <span class="fa fa-dribbble"></span>
+               </a>
+            </li>
             <li>
                <a href="https://github.com/tuistudio" target="_blank">
                   <span class="fa fa-github"></span>
                </a>
             </li>
-            <li><a><span class="fa fa-linkedin-square"></span></a></li>
+            <li>
+               <a href="https://www.linkedin.com/" target="_blank">
+                  <span class="fa fa-linkedin-square"></span>
+               </a>
+            </li>
          </ul>
       </div>
 
