--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -15,6 +15,24 @@
          <h1 class="text-center">Boost Your Business With US</h1>
 
          <p class="text-center">TUI Studio is a passionate team focusing on Web solutions.</p>
+
+         <ul class="icons list-inline list-unstyled">
+            <li>
+               <a href="http://twitter.com" target="_blank" title="Twitter">
+                  <span class="fa fa-twitter"></span>
+               </a>
+            </li>
+            <li>
+               <a href="https://dribbble.com/tuistudio-admin" target="_blank" title="Dribbble">
+                  <span class="fa fa-dribbble"></span>
+               </a>
+            </li>
+            <li>
+               <a href="https://github.com/tuistudio" target="_blank" title="GitHub">
+                  <span class="fa fa-github"></span>
+               </a>
+            </li>
+         </ul>
       </div>
    </div>
 
@@ -85,7 +103,6 @@
             <img class="center-block img-responsive" src="{{ static('image/works/tianqing.jpg') }}"
                  alt="">
          </div>
-
       </div>
    </div>
 
@@ -131,12 +148,12 @@
       </div>
    </div>
 
-   <div class="process">
+   <div class="contact">
       <div class="container">
          <h1 class="title">Process</h1>
 
          <div class="row">
-            <div class="col-sm-3 text-center">
+            <div class="col-sm-3 ">
                <p>Discover & Plan</p>
                <img src="http://placehold.it/150x150" alt=""/>
             </div>
